trabalho1/sintatico.output
Estado 50 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: programa $end

    1 $@1: ε

    2 $@2: ε

    3 $@3: ε

    4 programa: cabecalho $@1 variaveis $@2 funcoes $@3 T_INICIO lista_comandos T_FIM

    5 cabecalho: T_PROGRAMA T_IDENTIF

    6 variaveis: ε
    7          | declaracao_variaveis

    8 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    9                     | tipo lista_variaveis

   10 tipo: T_LOGICO
   11     | T_INTEIRO

   12 lista_variaveis: lista_variaveis T_IDENTIF
   13                | T_IDENTIF

   14 funcoes: ε

   15 $@4: ε

   16 funcoes: $@4 declaracao_funcoes

   17 declaracao_funcoes: funcao declaracao_funcoes
   18                   | funcao

   19 $@5: ε

   20 funcao: T_FUNC tipo T_IDENTIF $@5 T_ABRE parametros T_FECHA variaveis T_INICIO lista_comandos T_FIMFUNC

   21 parametros: ε
   22           | parametro parametros

   23 parametro: tipo T_IDENTIF

   24 lista_comandos: ε
   25               | comando lista_comandos

   26 comando: entrada_saida
   27        | repeticao
   28        | selecao
   29        | atribuicao
   30        | retorno

   31 retorno: T_RETORNE expressao

   32 entrada_saida: leitura
   33              | escrita

   34 leitura: T_LEIA T_IDENTIF

   35 escrita: T_ESCREVA expressao

   36 $@6: ε

   37 $@7: ε

   38 repeticao: T_ENQTO $@6 expressao T_FACA $@7 lista_comandos T_FIMENQTO

   39 $@8: ε

   40 $@9: ε

   41 selecao: T_SE expressao T_ENTAO $@8 lista_comandos T_SENAO $@9 lista_comandos T_FIMSE

   42 $@10: ε

   43 atribuicao: T_IDENTIF $@10 T_ATRIBUI expressao

   44 expressao: expressao T_VEZES expressao
   45          | expressao T_DIV expressao
   46          | expressao T_MAIS expressao
   47          | expressao T_MENOS expressao
   48          | expressao T_MAIOR expressao
   49          | expressao T_MENOR expressao
   50          | expressao T_IGUAL expressao
   51          | expressao T_E expressao
   52          | expressao T_OU expressao
   53          | termo

   54 chamada: ε

   55 $@11: ε

   56 chamada: T_ABRE lista_argumentos $@11 T_FECHA

   57 lista_argumentos: ε
   58                 | expressao lista_argumentos

   59 identificador: T_IDENTIF

   60 termo: identificador chamada
   61      | T_NUMERO
   62      | T_V
   63      | T_F
   64      | T_NAO termo
   65      | T_ABRE expressao T_FECHA


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 5
    T_INICIO (259) 4 20
    T_FIM (260) 4
    T_LEIA (261) 34
    T_ESCREVA (262) 35
    T_SE (263) 41
    T_ENTAO (264) 41
    T_SENAO (265) 41
    T_FIMSE (266) 41
    T_ENQTO (267) 38
    T_FACA (268) 38
    T_FIMENQTO (269) 38
    T_INTEIRO (270) 11
    T_LOGICO (271) 10
    T_MAIS (272) 46
    T_MENOS (273) 47
    T_VEZES (274) 44
    T_DIV (275) 45
    T_ATRIBUI (276) 43
    T_MAIOR (277) 48
    T_MENOR (278) 49
    T_IGUAL (279) 50
    T_E (280) 51
    T_OU (281) 52
    T_NAO (282) 64
    T_ABRE (283) 20 56 65
    T_FECHA (284) 20 56 65
    T_V (285) 62
    T_F (286) 63
    T_IDENTIF (287) 5 12 13 20 23 34 43 59
    T_NUMERO (288) 61
    T_RETORNE (289) 31
    T_FUNC (290) 20
    T_FIMFUNC (291) 20


Não terminais com as regras onde eles aparecem

    $accept (37)
        à esquerda: 0
    programa (38)
        à esquerda: 4
        à direita: 0
    $@1 (39)
        à esquerda: 1
        à direita: 4
    $@2 (40)
        à esquerda: 2
        à direita: 4
    $@3 (41)
        à esquerda: 3
        à direita: 4
    cabecalho (42)
        à esquerda: 5
        à direita: 4
    variaveis (43)
        à esquerda: 6 7
        à direita: 4 20
    declaracao_variaveis (44)
        à esquerda: 8 9
        à direita: 7 8
    tipo (45)
        à esquerda: 10 11
        à direita: 8 9 20 23
    lista_variaveis (46)
        à esquerda: 12 13
        à direita: 8 9 12
    funcoes (47)
        à esquerda: 14 16
        à direita: 4
    $@4 (48)
        à esquerda: 15
        à direita: 16
    declaracao_funcoes (49)
        à esquerda: 17 18
        à direita: 16 17
    funcao (50)
        à esquerda: 20
        à direita: 17 18
    $@5 (51)
        à esquerda: 19
        à direita: 20
    parametros (52)
        à esquerda: 21 22
        à direita: 20 22
    parametro (53)
        à esquerda: 23
        à direita: 22
    lista_comandos (54)
        à esquerda: 24 25
        à direita: 4 20 25 38 41
    comando (55)
        à esquerda: 26 27 28 29 30
        à direita: 25
    retorno (56)
        à esquerda: 31
        à direita: 30
    entrada_saida (57)
        à esquerda: 32 33
        à direita: 26
    leitura (58)
        à esquerda: 34
        à direita: 32
    escrita (59)
        à esquerda: 35
        à direita: 33
    repeticao (60)
        à esquerda: 38
        à direita: 27
    $@6 (61)
        à esquerda: 36
        à direita: 38
    $@7 (62)
        à esquerda: 37
        à direita: 38
    selecao (63)
        à esquerda: 41
        à direita: 28
    $@8 (64)
        à esquerda: 39
        à direita: 41
    $@9 (65)
        à esquerda: 40
        à direita: 41
    atribuicao (66)
        à esquerda: 43
        à direita: 29
    $@10 (67)
        à esquerda: 42
        à direita: 43
    expressao (68)
        à esquerda: 44 45 46 47 48 49 50 51 52 53
        à direita: 31 35 38 41 43 44 45 46 47 48 49 50 51 52 58 65
    chamada (69)
        à esquerda: 54 56
        à direita: 60
    $@11 (70)
        à esquerda: 55
        à direita: 56
    lista_argumentos (71)
        à esquerda: 57 58
        à direita: 56 58
    identificador (72)
        à esquerda: 59
        à direita: 60
    termo (73)
        à esquerda: 60 61 62 63 64 65
        à direita: 53 64


Estado 0

    0 $accept: • programa $end

    T_PROGRAMA  deslocar, e ir ao estado 1

    programa   ir ao estado 2
    cabecalho  ir ao estado 3


Estado 1

    5 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 4


Estado 2

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 5


Estado 3

    4 programa: cabecalho • $@1 variaveis $@2 funcoes $@3 T_INICIO lista_comandos T_FIM

    $padrão  reduzir usando a regra 1 ($@1)

    $@1  ir ao estado 6


Estado 4

    5 cabecalho: T_PROGRAMA T_IDENTIF •

    $padrão  reduzir usando a regra 5 (cabecalho)


Estado 5

    0 $accept: programa $end •

    $padrão  aceitar


Estado 6

    4 programa: cabecalho $@1 • variaveis $@2 funcoes $@3 T_INICIO lista_comandos T_FIM

    T_INTEIRO  deslocar, e ir ao estado 7
    T_LOGICO   deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 6 (variaveis)

    variaveis             ir ao estado 9
    declaracao_variaveis  ir ao estado 10
    tipo                  ir ao estado 11


Estado 7

   11 tipo: T_INTEIRO •

    $padrão  reduzir usando a regra 11 (tipo)


Estado 8

   10 tipo: T_LOGICO •

    $padrão  reduzir usando a regra 10 (tipo)


Estado 9

    4 programa: cabecalho $@1 variaveis • $@2 funcoes $@3 T_INICIO lista_comandos T_FIM

    $padrão  reduzir usando a regra 2 ($@2)

    $@2  ir ao estado 12


Estado 10

    7 variaveis: declaracao_variaveis •

    $padrão  reduzir usando a regra 7 (variaveis)


Estado 11

    8 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis
    9                     | tipo • lista_variaveis

    T_IDENTIF  deslocar, e ir ao estado 13

    lista_variaveis  ir ao estado 14


Estado 12

    4 programa: cabecalho $@1 variaveis $@2 • funcoes $@3 T_INICIO lista_comandos T_FIM

    T_FUNC   reduzir usando a regra 15 ($@4)
    $padrão  reduzir usando a regra 14 (funcoes)

    funcoes  ir ao estado 15
    $@4      ir ao estado 16


Estado 13

   13 lista_variaveis: T_IDENTIF •

    $padrão  reduzir usando a regra 13 (lista_variaveis)


Estado 14

    8 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis
    9                     | tipo lista_variaveis •
   12 lista_variaveis: lista_variaveis • T_IDENTIF

    T_INTEIRO  deslocar, e ir ao estado 7
    T_LOGICO   deslocar, e ir ao estado 8
    T_IDENTIF  deslocar, e ir ao estado 17

    $padrão  reduzir usando a regra 9 (declaracao_variaveis)

    declaracao_variaveis  ir ao estado 18
    tipo                  ir ao estado 11


Estado 15

    4 programa: cabecalho $@1 variaveis $@2 funcoes • $@3 T_INICIO lista_comandos T_FIM

    $padrão  reduzir usando a regra 3 ($@3)

    $@3  ir ao estado 19


Estado 16

   16 funcoes: $@4 • declaracao_funcoes

    T_FUNC  deslocar, e ir ao estado 20

    declaracao_funcoes  ir ao estado 21
    funcao              ir ao estado 22


Estado 17

   12 lista_variaveis: lista_variaveis T_IDENTIF •

    $padrão  reduzir usando a regra 12 (lista_variaveis)


Estado 18

    8 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $padrão  reduzir usando a regra 8 (declaracao_variaveis)


Estado 19

    4 programa: cabecalho $@1 variaveis $@2 funcoes $@3 • T_INICIO lista_comandos T_FIM

    T_INICIO  deslocar, e ir ao estado 23


Estado 20

   20 funcao: T_FUNC • tipo T_IDENTIF $@5 T_ABRE parametros T_FECHA variaveis T_INICIO lista_comandos T_FIMFUNC

    T_INTEIRO  deslocar, e ir ao estado 7
    T_LOGICO   deslocar, e ir ao estado 8

    tipo  ir ao estado 24


Estado 21

   16 funcoes: $@4 declaracao_funcoes •

    $padrão  reduzir usando a regra 16 (funcoes)


Estado 22

   17 declaracao_funcoes: funcao • declaracao_funcoes
   18                   | funcao •

    T_FUNC  deslocar, e ir ao estado 20

    $padrão  reduzir usando a regra 18 (declaracao_funcoes)

    declaracao_funcoes  ir ao estado 25
    funcao              ir ao estado 22


Estado 23

    4 programa: cabecalho $@1 variaveis $@2 funcoes $@3 T_INICIO • lista_comandos T_FIM

    T_LEIA     deslocar, e ir ao estado 26
    T_ESCREVA  deslocar, e ir ao estado 27
    T_SE       deslocar, e ir ao estado 28
    T_ENQTO    deslocar, e ir ao estado 29
    T_IDENTIF  deslocar, e ir ao estado 30
    T_RETORNE  deslocar, e ir ao estado 31

    $padrão  reduzir usando a regra 24 (lista_comandos)

    lista_comandos  ir ao estado 32
    comando         ir ao estado 33
    retorno         ir ao estado 34
    entrada_saida   ir ao estado 35
    leitura         ir ao estado 36
    escrita         ir ao estado 37
    repeticao       ir ao estado 38
    selecao         ir ao estado 39
    atribuicao      ir ao estado 40


Estado 24

   20 funcao: T_FUNC tipo • T_IDENTIF $@5 T_ABRE parametros T_FECHA variaveis T_INICIO lista_comandos T_FIMFUNC

    T_IDENTIF  deslocar, e ir ao estado 41


Estado 25

   17 declaracao_funcoes: funcao declaracao_funcoes •

    $padrão  reduzir usando a regra 17 (declaracao_funcoes)


Estado 26

   34 leitura: T_LEIA • T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 42


Estado 27

   35 escrita: T_ESCREVA • expressao

    T_NAO      deslocar, e ir ao estado 43
    T_ABRE     deslocar, e ir ao estado 44
    T_V        deslocar, e ir ao estado 45
    T_F        deslocar, e ir ao estado 46
    T_IDENTIF  deslocar, e ir ao estado 47
    T_NUMERO   deslocar, e ir ao estado 48

    expressao      ir ao estado 49
    identificador  ir ao estado 50
    termo          ir ao estado 51


Estado 28

   41 selecao: T_SE • expressao T_ENTAO $@8 lista_comandos T_SENAO $@9 lista_comandos T_FIMSE

    T_NAO      deslocar, e ir ao estado 43
    T_ABRE     deslocar, e ir ao estado 44
    T_V        deslocar, e ir ao estado 45
    T_F        deslocar, e ir ao estado 46
    T_IDENTIF  deslocar, e ir ao estado 47
    T_NUMERO   deslocar, e ir ao estado 48

    expressao      ir ao estado 52
    identificador  ir ao estado 50
    termo          ir ao estado 51


Estado 29

   38 repeticao: T_ENQTO • $@6 expressao T_FACA $@7 lista_comandos T_FIMENQTO

    $padrão  reduzir usando a regra 36 ($@6)

    $@6  ir ao estado 53


Estado 30

   43 atribuicao: T_IDENTIF • $@10 T_ATRIBUI expressao

    $padrão  reduzir usando a regra 42 ($@10)

    $@10  ir ao estado 54


Estado 31

   31 retorno: T_RETORNE • expressao

    T_NAO      deslocar, e ir ao estado 43
    T_ABRE     deslocar, e ir ao estado 44
    T_V        deslocar, e ir ao estado 45
    T_F        deslocar, e ir ao estado 46
    T_IDENTIF  deslocar, e ir ao estado 47
    T_NUMERO   deslocar, e ir ao estado 48

    expressao      ir ao estado 55
    identificador  ir ao estado 50
    termo          ir ao estado 51


Estado 32

    4 programa: cabecalho $@1 variaveis $@2 funcoes $@3 T_INICIO lista_comandos • T_FIM

    T_FIM  deslocar, e ir ao estado 56


Estado 33

   25 lista_comandos: comando • lista_comandos

    T_LEIA     deslocar, e ir ao estado 26
    T_ESCREVA  deslocar, e ir ao estado 27
    T_SE       deslocar, e ir ao estado 28
    T_ENQTO    deslocar, e ir ao estado 29
    T_IDENTIF  deslocar, e ir ao estado 30
    T_RETORNE  deslocar, e ir ao estado 31

    $padrão  reduzir usando a regra 24 (lista_comandos)

    lista_comandos  ir ao estado 57
    comando         ir ao estado 33
    retorno         ir ao estado 34
    entrada_saida   ir ao estado 35
    leitura         ir ao estado 36
    escrita         ir ao estado 37
    repeticao       ir ao estado 38
    selecao         ir ao estado 39
    atribuicao      ir ao estado 40


Estado 34

   30 comando: retorno •

    $padrão  reduzir usando a regra 30 (comando)


Estado 35

   26 comando: entrada_saida •

    $padrão  reduzir usando a regra 26 (comando)


Estado 36

   32 entrada_saida: leitura •

    $padrão  reduzir usando a regra 32 (entrada_saida)


Estado 37

   33 entrada_saida: escrita •

    $padrão  reduzir usando a regra 33 (entrada_saida)


Estado 38

   27 comando: repeticao •

    $padrão  reduzir usando a regra 27 (comando)


Estado 39

   28 comando: selecao •

    $padrão  reduzir usando a regra 28 (comando)


Estado 40

   29 comando: atribuicao •

    $padrão  reduzir usando a regra 29 (comando)


Estado 41

   20 funcao: T_FUNC tipo T_IDENTIF • $@5 T_ABRE parametros T_FECHA variaveis T_INICIO lista_comandos T_FIMFUNC

    $padrão  reduzir usando a regra 19 ($@5)

    $@5  ir ao estado 58


Estado 42

   34 leitura: T_LEIA T_IDENTIF •

    $padrão  reduzir usando a regra 34 (leitura)


Estado 43

   64 termo: T_NAO • termo

    T_NAO      deslocar, e ir ao estado 43
    T_ABRE     deslocar, e ir ao estado 44
    T_V        deslocar, e ir ao estado 45
    T_F        deslocar, e ir ao estado 46
    T_IDENTIF  deslocar, e ir ao estado 47
    T_NUMERO   deslocar, e ir ao estado 48

    identificador  ir ao estado 50
    termo          ir ao estado 59


Estado 44

   65 termo: T_ABRE • expressao T_FECHA

    T_NAO      deslocar, e ir ao estado 43
    T_ABRE     deslocar, e ir ao estado 44
    T_V        deslocar, e ir ao estado 45
    T_F        deslocar, e ir ao estado 46
    T_IDENTIF  deslocar, e ir ao estado 47
    T_NUMERO   deslocar, e ir ao estado 48

    expressao      ir ao estado 60
    identificador  ir ao estado 50
    termo          ir ao estado 51


Estado 45

   62 termo: T_V •

    $padrão  reduzir usando a regra 62 (termo)


Estado 46

   63 termo: T_F •

    $padrão  reduzir usando a regra 63 (termo)


Estado 47

   59 identificador: T_IDENTIF •

    $padrão  reduzir usando a regra 59 (identificador)


Estado 48

   61 termo: T_NUMERO •

    $padrão  reduzir usando a regra 61 (termo)


Estado 49

   35 escrita: T_ESCREVA expressao •
   44 expressao: expressao • T_VEZES expressao
   45          | expressao • T_DIV expressao
   46          | expressao • T_MAIS expressao
   47          | expressao • T_MENOS expressao
   48          | expressao • T_MAIOR expressao
   49          | expressao • T_MENOR expressao
   50          | expressao • T_IGUAL expressao
   51          | expressao • T_E expressao
   52          | expressao • T_OU expressao

    T_MAIS   deslocar, e ir ao estado 61
    T_MENOS  deslocar, e ir ao estado 62
    T_VEZES  deslocar, e ir ao estado 63
    T_DIV    deslocar, e ir ao estado 64
    T_MAIOR  deslocar, e ir ao estado 65
    T_MENOR  deslocar, e ir ao estado 66
    T_IGUAL  deslocar, e ir ao estado 67
    T_E      deslocar, e ir ao estado 68
    T_OU     deslocar, e ir ao estado 69

    $padrão  reduzir usando a regra 35 (escrita)


Estado 50

   60 termo: identificador • chamada

    T_ABRE  deslocar, e ir ao estado 70

    T_ABRE   [reduzir usando a regra 54 (chamada)]
    $padrão  reduzir usando a regra 54 (chamada)

    chamada  ir ao estado 71


Estado 51

   53 expressao: termo •

    $padrão  reduzir usando a regra 53 (expressao)


Estado 52

   41 selecao: T_SE expressao • T_ENTAO $@8 lista_comandos T_SENAO $@9 lista_comandos T_FIMSE
   44 expressao: expressao • T_VEZES expressao
   45          | expressao • T_DIV expressao
   46          | expressao • T_MAIS expressao
   47          | expressao • T_MENOS expressao
   48          | expressao • T_MAIOR expressao
   49          | expressao • T_MENOR expressao
   50          | expressao • T_IGUAL expressao
   51          | expressao • T_E expressao
   52          | expressao • T_OU expressao

    T_ENTAO  deslocar, e ir ao estado 72
    T_MAIS   deslocar, e ir ao estado 61
    T_MENOS  deslocar, e ir ao estado 62
    T_VEZES  deslocar, e ir ao estado 63
    T_DIV    deslocar, e ir ao estado 64
    T_MAIOR  deslocar, e ir ao estado 65
    T_MENOR  deslocar, e ir ao estado 66
    T_IGUAL  deslocar, e ir ao estado 67
    T_E      deslocar, e ir ao estado 68
    T_OU     deslocar, e ir ao estado 69


Estado 53

   38 repeticao: T_ENQTO $@6 • expressao T_FACA $@7 lista_comandos T_FIMENQTO

    T_NAO      deslocar, e ir ao estado 43
    T_ABRE     deslocar, e ir ao estado 44
    T_V        deslocar, e ir ao estado 45
    T_F        deslocar, e ir ao estado 46
    T_IDENTIF  deslocar, e ir ao estado 47
    T_NUMERO   deslocar, e ir ao estado 48

    expressao      ir ao estado 73
    identificador  ir ao estado 50
    termo          ir ao estado 51


Estado 54

   43 atribuicao: T_IDENTIF $@10 • T_ATRIBUI expressao

    T_ATRIBUI  deslocar, e ir ao estado 74


Estado 55

   31 retorno: T_RETORNE expressao •
   44 expressao: expressao • T_VEZES expressao
   45          | expressao • T_DIV expressao
   46          | expressao • T_MAIS expressao
   47          | expressao • T_MENOS expressao
   48          | expressao • T_MAIOR expressao
   49          | expressao • T_MENOR expressao
   50          | expressao • T_IGUAL expressao
   51          | expressao • T_E expressao
   52          | expressao • T_OU expressao

    T_MAIS   deslocar, e ir ao estado 61
    T_MENOS  deslocar, e ir ao estado 62
    T_VEZES  deslocar, e ir ao estado 63
    T_DIV    deslocar, e ir ao estado 64
    T_MAIOR  deslocar, e ir ao estado 65
    T_MENOR  deslocar, e ir ao estado 66
    T_IGUAL  deslocar, e ir ao estado 67
    T_E      deslocar, e ir ao estado 68
    T_OU     deslocar, e ir ao estado 69

    $padrão  reduzir usando a regra 31 (retorno)


Estado 56

    4 programa: cabecalho $@1 variaveis $@2 funcoes $@3 T_INICIO lista_comandos T_FIM •

    $padrão  reduzir usando a regra 4 (programa)


Estado 57

   25 lista_comandos: comando lista_comandos •

    $padrão  reduzir usando a regra 25 (lista_comandos)


Estado 58

   20 funcao: T_FUNC tipo T_IDENTIF $@5 • T_ABRE parametros T_FECHA variaveis T_INICIO lista_comandos T_FIMFUNC

    T_ABRE  deslocar, e ir ao estado 75


Estado 59

   64 termo: T_NAO termo •

    $padrão  reduzir usando a regra 64 (termo)


Estado 60

   44 expressao: expressao • T_VEZES expressao
   45          | expressao • T_DIV expressao
   46          | expressao • T_MAIS expressao
   47          | expressao • T_MENOS expressao
   48          | expressao • T_MAIOR expressao
   49          | expressao • T_MENOR expressao
   50          | expressao • T_IGUAL expressao
   51          | expressao • T_E expressao
   52          | expressao • T_OU expressao
   65 termo: T_ABRE expressao • T_FECHA

    T_MAIS   deslocar, e ir ao estado 61
    T_MENOS  deslocar, e ir ao estado 62
    T_VEZES  deslocar, e ir ao estado 63
    T_DIV    deslocar, e ir ao estado 64
    T_MAIOR  deslocar, e ir ao estado 65
    T_MENOR  deslocar, e ir ao estado 66
    T_IGUAL  deslocar, e ir ao estado 67
    T_E      deslocar, e ir ao estado 68
    T_OU     deslocar, e ir ao estado 69
    T_FECHA  deslocar, e ir ao estado 76


Estado 61

   46 expressao: expressao T_MAIS • expressao

    T_NAO      deslocar, e ir ao estado 43
    T_ABRE     deslocar, e ir ao estado 44
    T_V        deslocar, e ir ao estado 45
    T_F        deslocar, e ir ao estado 46
    T_IDENTIF  deslocar, e ir ao estado 47
    T_NUMERO   deslocar, e ir ao estado 48

    expressao      ir ao estado 77
    identificador  ir ao estado 50
    termo          ir ao estado 51


Estado 62

   47 expressao: expressao T_MENOS • expressao

    T_NAO      deslocar, e ir ao estado 43
    T_ABRE     deslocar, e ir ao estado 44
    T_V        deslocar, e ir ao estado 45
    T_F        deslocar, e ir ao estado 46
    T_IDENTIF  deslocar, e ir ao estado 47
    T_NUMERO   deslocar, e ir ao estado 48

    expressao      ir ao estado 78
    identificador  ir ao estado 50
    termo          ir ao estado 51


Estado 63

   44 expressao: expressao T_VEZES • expressao

    T_NAO      deslocar, e ir ao estado 43
    T_ABRE     deslocar, e ir ao estado 44
    T_V        deslocar, e ir ao estado 45
    T_F        deslocar, e ir ao estado 46
    T_IDENTIF  deslocar, e ir ao estado 47
    T_NUMERO   deslocar, e ir ao estado 48

    expressao      ir ao estado 79
    identificador  ir ao estado 50
    termo          ir ao estado 51


Estado 64

   45 expressao: expressao T_DIV • expressao

    T_NAO      deslocar, e ir ao estado 43
    T_ABRE     deslocar, e ir ao estado 44
    T_V        deslocar, e ir ao estado 45
    T_F        deslocar, e ir ao estado 46
    T_IDENTIF  deslocar, e ir ao estado 47
    T_NUMERO   deslocar, e ir ao estado 48

    expressao      ir ao estado 80
    identificador  ir ao estado 50
    termo          ir ao estado 51


Estado 65

   48 expressao: expressao T_MAIOR • expressao

    T_NAO      deslocar, e ir ao estado 43
    T_ABRE     deslocar, e ir ao estado 44
    T_V        deslocar, e ir ao estado 45
    T_F        deslocar, e ir ao estado 46
    T_IDENTIF  deslocar, e ir ao estado 47
    T_NUMERO   deslocar, e ir ao estado 48

    expressao      ir ao estado 81
    identificador  ir ao estado 50
    termo          ir ao estado 51


Estado 66

   49 expressao: expressao T_MENOR • expressao

    T_NAO      deslocar, e ir ao estado 43
    T_ABRE     deslocar, e ir ao estado 44
    T_V        deslocar, e ir ao estado 45
    T_F        deslocar, e ir ao estado 46
    T_IDENTIF  deslocar, e ir ao estado 47
    T_NUMERO   deslocar, e ir ao estado 48

    expressao      ir ao estado 82
    identificador  ir ao estado 50
    termo          ir ao estado 51


Estado 67

   50 expressao: expressao T_IGUAL • expressao

    T_NAO      deslocar, e ir ao estado 43
    T_ABRE     deslocar, e ir ao estado 44
    T_V        deslocar, e ir ao estado 45
    T_F        deslocar, e ir ao estado 46
    T_IDENTIF  deslocar, e ir ao estado 47
    T_NUMERO   deslocar, e ir ao estado 48

    expressao      ir ao estado 83
    identificador  ir ao estado 50
    termo          ir ao estado 51


Estado 68

   51 expressao: expressao T_E • expressao

    T_NAO      deslocar, e ir ao estado 43
    T_ABRE     deslocar, e ir ao estado 44
    T_V        deslocar, e ir ao estado 45
    T_F        deslocar, e ir ao estado 46
    T_IDENTIF  deslocar, e ir ao estado 47
    T_NUMERO   deslocar, e ir ao estado 48

    expressao      ir ao estado 84
    identificador  ir ao estado 50
    termo          ir ao estado 51


Estado 69

   52 expressao: expressao T_OU • expressao

    T_NAO      deslocar, e ir ao estado 43
    T_ABRE     deslocar, e ir ao estado 44
    T_V        deslocar, e ir ao estado 45
    T_F        deslocar, e ir ao estado 46
    T_IDENTIF  deslocar, e ir ao estado 47
    T_NUMERO   deslocar, e ir ao estado 48

    expressao      ir ao estado 85
    identificador  ir ao estado 50
    termo          ir ao estado 51


Estado 70

   56 chamada: T_ABRE • lista_argumentos $@11 T_FECHA

    T_NAO      deslocar, e ir ao estado 43
    T_ABRE     deslocar, e ir ao estado 44
    T_V        deslocar, e ir ao estado 45
    T_F        deslocar, e ir ao estado 46
    T_IDENTIF  deslocar, e ir ao estado 47
    T_NUMERO   deslocar, e ir ao estado 48

    $padrão  reduzir usando a regra 57 (lista_argumentos)

    expressao         ir ao estado 86
    lista_argumentos  ir ao estado 87
    identificador     ir ao estado 50
    termo             ir ao estado 51


Estado 71

   60 termo: identificador chamada •

    $padrão  reduzir usando a regra 60 (termo)


Estado 72

   41 selecao: T_SE expressao T_ENTAO • $@8 lista_comandos T_SENAO $@9 lista_comandos T_FIMSE

    $padrão  reduzir usando a regra 39 ($@8)

    $@8  ir ao estado 88


Estado 73

   38 repeticao: T_ENQTO $@6 expressao • T_FACA $@7 lista_comandos T_FIMENQTO
   44 expressao: expressao • T_VEZES expressao
   45          | expressao • T_DIV expressao
   46          | expressao • T_MAIS expressao
   47          | expressao • T_MENOS expressao
   48          | expressao • T_MAIOR expressao
   49          | expressao • T_MENOR expressao
   50          | expressao • T_IGUAL expressao
   51          | expressao • T_E expressao
   52          | expressao • T_OU expressao

    T_FACA   deslocar, e ir ao estado 89
    T_MAIS   deslocar, e ir ao estado 61
    T_MENOS  deslocar, e ir ao estado 62
    T_VEZES  deslocar, e ir ao estado 63
    T_DIV    deslocar, e ir ao estado 64
    T_MAIOR  deslocar, e ir ao estado 65
    T_MENOR  deslocar, e ir ao estado 66
    T_IGUAL  deslocar, e ir ao estado 67
    T_E      deslocar, e ir ao estado 68
    T_OU     deslocar, e ir ao estado 69


Estado 74

   43 atribuicao: T_IDENTIF $@10 T_ATRIBUI • expressao

    T_NAO      deslocar, e ir ao estado 43
    T_ABRE     deslocar, e ir ao estado 44
    T_V        deslocar, e ir ao estado 45
    T_F        deslocar, e ir ao estado 46
    T_IDENTIF  deslocar, e ir ao estado 47
    T_NUMERO   deslocar, e ir ao estado 48

    expressao      ir ao estado 90
    identificador  ir ao estado 50
    termo          ir ao estado 51


Estado 75

   20 funcao: T_FUNC tipo T_IDENTIF $@5 T_ABRE • parametros T_FECHA variaveis T_INICIO lista_comandos T_FIMFUNC

    T_INTEIRO  deslocar, e ir ao estado 7
    T_LOGICO   deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 21 (parametros)

    tipo        ir ao estado 91
    parametros  ir ao estado 92
    parametro   ir ao estado 93


Estado 76

   65 termo: T_ABRE expressao T_FECHA •

    $padrão  reduzir usando a regra 65 (termo)


Estado 77

   44 expressao: expressao • T_VEZES expressao
   45          | expressao • T_DIV expressao
   46          | expressao • T_MAIS expressao
   46          | expressao T_MAIS expressao •
   47          | expressao • T_MENOS expressao
   48          | expressao • T_MAIOR expressao
   49          | expressao • T_MENOR expressao
   50          | expressao • T_IGUAL expressao
   51          | expressao • T_E expressao
   52          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 63
    T_DIV    deslocar, e ir ao estado 64

    $padrão  reduzir usando a regra 46 (expressao)


Estado 78

   44 expressao: expressao • T_VEZES expressao
   45          | expressao • T_DIV expressao
   46          | expressao • T_MAIS expressao
   47          | expressao • T_MENOS expressao
   47          | expressao T_MENOS expressao •
   48          | expressao • T_MAIOR expressao
   49          | expressao • T_MENOR expressao
   50          | expressao • T_IGUAL expressao
   51          | expressao • T_E expressao
   52          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 63
    T_DIV    deslocar, e ir ao estado 64

    $padrão  reduzir usando a regra 47 (expressao)


Estado 79

   44 expressao: expressao • T_VEZES expressao
   44          | expressao T_VEZES expressao •
   45          | expressao • T_DIV expressao
   46          | expressao • T_MAIS expressao
   47          | expressao • T_MENOS expressao
   48          | expressao • T_MAIOR expressao
   49          | expressao • T_MENOR expressao
   50          | expressao • T_IGUAL expressao
   51          | expressao • T_E expressao
   52          | expressao • T_OU expressao

    $padrão  reduzir usando a regra 44 (expressao)


Estado 80

   44 expressao: expressao • T_VEZES expressao
   45          | expressao • T_DIV expressao
   45          | expressao T_DIV expressao •
   46          | expressao • T_MAIS expressao
   47          | expressao • T_MENOS expressao
   48          | expressao • T_MAIOR expressao
   49          | expressao • T_MENOR expressao
   50          | expressao • T_IGUAL expressao
   51          | expressao • T_E expressao
   52          | expressao • T_OU expressao

    $padrão  reduzir usando a regra 45 (expressao)


Estado 81

   44 expressao: expressao • T_VEZES expressao
   45          | expressao • T_DIV expressao
   46          | expressao • T_MAIS expressao
   47          | expressao • T_MENOS expressao
   48          | expressao • T_MAIOR expressao
   48          | expressao T_MAIOR expressao •
   49          | expressao • T_MENOR expressao
   50          | expressao • T_IGUAL expressao
   51          | expressao • T_E expressao
   52          | expressao • T_OU expressao

    T_MAIS   deslocar, e ir ao estado 61
    T_MENOS  deslocar, e ir ao estado 62
    T_VEZES  deslocar, e ir ao estado 63
    T_DIV    deslocar, e ir ao estado 64

    $padrão  reduzir usando a regra 48 (expressao)


Estado 82

   44 expressao: expressao • T_VEZES expressao
   45          | expressao • T_DIV expressao
   46          | expressao • T_MAIS expressao
   47          | expressao • T_MENOS expressao
   48          | expressao • T_MAIOR expressao
   49          | expressao • T_MENOR expressao
   49          | expressao T_MENOR expressao •
   50          | expressao • T_IGUAL expressao
   51          | expressao • T_E expressao
   52          | expressao • T_OU expressao
